--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "--- This repository contains the experiment to generate stimuli and collect data written in jsPsych.",
   "main": "config.js",
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
